Fix more sonar warnings.